# aoc-2024

./: README.md  pyproject.toml
aoc_2024/day01/: day1.ipynb
aoc_2024/day02/: data.csv  screatch.ipynb
aoc_2024/day03/: scratch.ipynb
aoc_2024/day1/: day1.csv
