[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["John Doe <johndoe@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
polars = "^1.16.0"
pyarrow = "^18.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
